--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier -w src"
   },
@@ -22,6 +24,7 @@
     "leaflet": "^1.9.4"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "prettier": "^3.5.3",
     "vite": "^6.3.4"
   }
