--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
-    "leaflet": "^1.9.4"
+    "idb": "^7.1.1",
+    "leaflet": "^1.9.4",
+    "vite-plugin-pwa": "^1.0.0",
+    "workbox-window": "^7.3.0"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0",
